# corb

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac  cpowner
share/: Makefile.am  README
share/doc/: Makefile.am  abbreviations.txi  abbreviations_wrapper_dvl.txi  abbreviations_wrapper_use.txi  and_everything.txi  buildsystem.txi  coding.txi  corb-copying.txi  corb-cpyng_wrapper_dvl.txi  corb-cpyng_wrapper_use.txi  corb-developer-handbook.txi  corb-user-manual.txi  corb.txi  corb_tools.txi  devel_doc_notes  documenting.txi  fdl_wrapper.txi  fdl_wrapper_dvl.txi  fdl_wrapper_use.txi  gplify  impatient.txi  indeces-use.txi  indeces.txi  indices-cp-dvl.txi  indices-cp-use.txi  indices-fig-use.txi  indices-op-dvl.txi  indices-op-use.txi  indices-pg-use.txi  installation.txi  licensing.txi  onomastics.txi  preface_dvl.txi  preface_use.txi  using_git.txi
share/misc/: Makefile.am  README
share/misc/config/: elisp-comp
share/misc/emacs/: Makefile.am  README  c-l-helpers.el  emacs-l-helpers.el  junk  libgtcore-font-lock-faces.el  pdb-font-lock-faces.el
share/misc/m4/: crb_arg.m4  crb_assemble_libapps.m4  crb_cflags.m4  crb_check_headers.m4  crb_check_libcairo.m4  crb_check_libmath.m4  crb_eval_var.m4  crb_get_version.m4  crb_perl.m4  crb_prog.m4  crb_prog_head.m4  crb_prog_perl.m4  crb_set_cflags_warnings.m4
src/: Makefile.am  README  corb.c  crb.ggo  crb_cmdline.c  crb_cmdline.h
src/libcrbapps/: Makefile.am  alphabet.c  alphabet.h  brot.c  brot.ggo  brot.h  brot_cmdline.c  brot_cmdline.h  brot_cmdline.h.old  er2de.c  er2de.ggo  er2de.h  er2de_cmdline.c  er2de_cmdline.h  fold.c  fold.ggo  fold.h  fold_cmdline.c  fold_cmdline.h  salat.c  salat.ggo  salat.h  salat_cmdline.c  salat_cmdline.h
src/libcrbbasic/: Makefile.am  argvprsr.c  argvprsr.h  crb_unused.h  crbbasic.h  errormsg.c  errormsg.h  gcckywrd.h  genarray.h  gfile.c  gfile.h  inc_bool.h  inc_pthr.h  inc_strg.h  memmgr.c  memmgr.h  mprintf.c  mprintf.h  mprintf_dummy.h  str.c  str.h  test_argvprsr.c  test_errormsg.c  test_genarray.c  test_gfile.c  test_memmgr.c  test_mprintf.c  test_str.c  undef.h
src/libcrbbrot/: Makefile.am  crbbrot.h  preset.c  preset.h  scmf_rna_opt.c  scmf_rna_opt.h  seqmatrix.c  seqmatrix.h
src/libcrbfallback/: Makefile.am  README  malloc.c  realloc.c  snprintf.c  snprintf.h  vfprintf.c
src/libcrbrna/: Makefile.am  alphabet.c  alphabet.h  crbrna.h  nn_scores.c  nn_scores.h  rna.c  rna.h  secstruct.c  secstruct.h  test_alphabet.c  test_nn_scores.c  test_rna.c  test_secstruct  test_secstruct.c
