# Last modified: 2008-04-28.14

# Copyright (c) 2007 Stefan Bienert <bienert@zbh.uni-hamburg.de>
# Copyright (c) 2007 Center for Bioinformatics, University of Hamburg 

# See COPYING file in the top level directory of this tree for licence.


ACLOCAL_AMFLAGS = -I share/misc/m4

if CRB_PC_ELISP
  DEVEL_DIRS=emacs
endif
SUBDIRS=$(DEVEL_DIRS) bin

DIST_SUBDIRS=emacs bin

# Local variables:
# eval: (add-hook 'write-file-hooks 'time-stamp)
# time-stamp-start: "Last modified: "
# time-stamp-format: "%:y-%02m-%02d.%02H"
# time-stamp-end: "$"
# End:
